4 May 2021: George
	- Fix for #367: only attempt to get the interface for queries that are no
	  longer on the tcp_waiting_list.

4 May 2021: Wouter
	- Merge #478: Allow configuration of TCP timeout while waiting for
	  response.

3 May 2021: Wouter
	- Fix #481: Fix comment in configuration file.

29 April 2021: Wouter
	- Add that log-servfail prints an IP address and more information
	  about one of the last failures for that query.

28 April 2021: George
	- Fix compiler warning for signed/unsigned comparison for
	  max_reuse_tcp_queries.

28 April 2021: Wouter
	- Fix #474: always_null and others inside view.

26 April 2021: Wouter
	- Merge #470 from edevil: Allow configuration of persistent TCP
	  connections.

22 April 2021: Wouter
	- Merge #466 from FGasper: Support OpenSSLs that lack
	  SSL_get0_alpn_selected.
	- Fix #468: OpenSSL 1.0.1 can no longer build Unbound.
	- Further fix for #468: detect SSL_CTX_set_alpn_protos for build with
	  OpenSSL 1.0.1.
	- Fix that testcode dohclient has OpenSSL initialisation calls.

13 April 2021: George
	- Fix documentation comment for files previously residing in checkconf/.
	- Remove unused functions worker_handle_reply and libworker_handle_reply.

13 April 2021: Wouter
	- Fix that nxdomain synthesis does not happen above the stub or
	  forward definition.

12 April 2021: George
	- Fix (increase) verbosity level for iterator error log in
	  processQueryTargets().

12 April 2021: Wouter
	- Fix permission denied sendto log, squelch the log messages
	  unless high verbosity is set.

9 April 2021: Wouter
	- rebuild configure to set EXTRALINK to libunbound.la for #460.

7 April 2021: Wouter
	- Fix for #411: Depth protect for crash on deleted element timeout.

1 April 2021: Wouter
	- Merge #460 from orbea: build: Link with the libtool archive.
	- Fix to stop IPv6 PMTU discovery.

31 March 2021: George
	- Clean makedist.sh.

31 March 2021: Wouter
	- Fix stack-protector change to not override other CFLAGS options.
