@@ -1,6 +1,7 @@
 4 May 2021: George
 	- Fix for #367: only attempt to get the interface for queries that are no
 	  longer on the tcp_waiting_list.
+	- Add more logging for out-of-memory cases.
 
 4 May 2021: Wouter
 	- Merge #478: Allow configuration of TCP timeout while waiting for
